<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/login_background"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    tools:context=".LoginPage">


    <!--<TextView
        android:id="@+id/hello_below"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Welcome"
        android:textAlignment="center"
        android:textColor="@color/lightBlue"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/login_data"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Hello" />-->

    <TextView
        android:id="@+id/Hello"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/welcome_back"
        android:textAlignment="viewStart"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="45sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/login_data"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.22"
        app:layout_constraintVertical_bias="0.64" />

    <LinearLayout
        android:id="@+id/login_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="15dp"
        android:orientation="vertical"
        app:layout_constraintVertical_bias="0.48"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/error_message_display_txt_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/colorRed"
            android:textSize="16sp"
            android:textStyle="bold|italic" />

        <TextView
            android:id="@+id/error_message_display_txt_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/colorRed"
            android:textSize="16sp"
            android:textStyle="bold|italic" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginTop="4dp"
            android:background="@drawable/bottom_border"
            android:orientation="horizontal">
            <!--android:background="@drawable/border2"-->

            <ImageView
                android:id="@+id/LIperson"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:src="@drawable/ic_person_black_24dp" />

            <EditText
                android:id="@+id/edt_email"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="9"
                android:drawableBottom="@color/colorAccent"
                android:background="@android:color/transparent"
                android:elegantTextHeight="true"
                android:ems="10"
                android:hint="@string/email_or_username"
                android:imeOptions="actionDone"
                android:inputType="textEmailAddress"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textColorHighlight="@color/black" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:background="@drawable/bottom_border"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/img_lock"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:src="@drawable/ic_lock_outline_black_24dp" />

            <EditText
                android:id="@+id/edt_password"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="8"
                android:background="@android:color/transparent"
                android:elegantTextHeight="true"
                android:drawableBottom="@color/colorAccent"
                android:ems="10"
                android:hint="Password"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textColorHighlight="@color/black" />

            <ImageView
                android:id="@+id/img_eye"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:clickable="true"
                android:onClick="eyeClicked"
                android:src="@drawable/hide_password" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="5dp"
            android:layout_marginTop="10dp"
            android:clickable="true"
            android:onClick="GoToForgotPassword"
            android:foregroundGravity="right"
            android:maxLines="2"
            android:text="@string/forgot_password"
            android:textColor="@color/colorAccent"
            android:textSize="18sp"
            android:textStyle="bold" />



    </LinearLayout>


    <ImageView
        android:id="@+id/signInbtn"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:src="@drawable/arrow_next"
        android:defaultFocusHighlightEnabled="true"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintBottom_toTopOf="@+id/SignInWithClientApps"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintVertical_bias="0.35"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_data" />

    <LinearLayout
        android:id="@+id/SignInWithClientApps"
        android:layout_width="wrap_content"
        android:layout_height="49dp"
        android:gravity="end|center_vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.97">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/sign_in_with"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/google"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="5dp"
            android:background="@drawable/google"
            android:defaultFocusHighlightEnabled="true"
            android:focusable="true" />

        <com.facebook.login.widget.LoginButton
            android:id="@+id/fb"
            android:layout_width="28dp"
            android:layout_height="50dp"
            android:focusable="true" />


        <!--style="@style/FacebookLoginButton"-->
    </LinearLayout>

    <TextView
        android:id="@+id/SignUpTxt"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:onClick="GoToSignUpPage"
        android:text="@string/sign_up"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.97" />

</androidx.constraintlayout.widget.ConstraintLayout>